Fix squeeze size of image gallery on mobile devices

--- a/app/components/Gallery/Gallery.styl
+++ b/app/components/Gallery/Gallery.styl
@@ -1,43 +1,44 @@
-.image-gallery
-    margin-top 40px
-    margin-bottom 20px
+.article
+  .image-gallery
+      margin-top 40px
+      margin-bottom 20px
 
-    @media phone
-        margin-left -20px
-        margin-right -20px
+      @media phone
+          margin-left -20px
+          margin-right -20px
 
-    .image-gallery-bullets
-        bottom 70px
+      .image-gallery-bullets
+          bottom 70px
 
-        .image-gallery-bullet
-            font-size: 0;
-            width: 20px;
-            height: 20px;
-            display: inline-block;
-            background: #b0bec5;
-            cursor: pointer;
-            border: 4px solid #fff;
-            -webkit-border-radius: 50%;
-            border-radius: 50%;
-            box-shadow none
-            &.active
-                background-color: #02a511;
-                .event-detail-page &
-                    background-color: #8436a2
+          .image-gallery-bullet
+              font-size: 0;
+              width: 20px;
+              height: 20px;
+              display: inline-block;
+              background: #b0bec5;
+              cursor: pointer;
+              border: 4px solid #fff;
+              -webkit-border-radius: 50%;
+              border-radius: 50%;
+              box-shadow none
+              &.active
+                  background-color: #02a511;
+                  .event-detail-page &
+                      background-color: #8436a2
 
 
-    .image-gallery-slides
-        padding-bottom 40px
+      .image-gallery-slides
+          padding-bottom 40px
 
-    .image-gallery-slide
-        height: 450px;
-        .image-gallery-description
-            position absolute
-            bottom -38px
-            width 100%
-            text-align center
-            background transparent
-            color #888
+      .image-gallery-slide
+          height: 450px;
+          .image-gallery-description
+              position absolute
+              bottom -38px
+              width 100%
+              text-align center
+              background transparent
+              color #888
 
 .image-gallery-image
     width: 100%;
@@ -52,50 +53,63 @@
         left: 0
         right: 0
         bottom: 0
+  .image-gallery-image
+      width: 100%;
+      height: auto;
+      position: relative;
+      img
+          width: 100%
+          height: auto
+          object-fit cover
+          position: absolute
+          top: 0
+          left: 0
+          right: 0
+          bottom: 0
 
-.image-gallery-right-nav
-.image-gallery-left-nav
-    opacity 0
-    margin-top -20px
-    transition all .3s
+  .image-gallery-right-nav
+  .image-gallery-left-nav
+      opacity 0
+      margin-top -20px
+      transition all .3s
 
-.image-gallery-right-nav
-    margin-right -10px
-.image-gallery-left-nav
-    margin-left -10px
+  .image-gallery-right-nav
+      margin-right -10px
+  .image-gallery-left-nav
+      margin-left -10px
 
-.image-gallery-right-nav
-    &:before
-        content ''
-        width 0
-        height 0
-        border: 10px solid black;
-        border-color: #fff #fff transparent transparent;
-        transform rotate(45deg)
-        box-shadow: 2px -2px 2px 0 rgba(0, 0, 0, 0.4);
-.image-gallery-left-nav
-    &:before
-        content ''
-        width 0
-        height 0
-        border: 10px solid black;
-        border-color: transparent transparent #fff #fff;
-        transform rotate(45deg)
-        box-shadow: -2px 2px 2px 0 rgba(0, 0, 0, 0.4);
+  .image-gallery-right-nav
+      &:before
+          content ''
+          width 0
+          height 0
+          border: 10px solid black;
+          border-color: #fff #fff transparent transparent;
+          transform rotate(45deg)
+          box-shadow: 2px -2px 2px 0 rgba(0, 0, 0, 0.4);
+  .image-gallery-left-nav
+      &:before
+          content ''
+          width 0
+          height 0
+          border: 10px solid black;
+          border-color: transparent transparent #fff #fff;
+          transform rotate(45deg)
+          box-shadow: -2px 2px 2px 0 rgba(0, 0, 0, 0.4);
 
-.image-gallery-slide-wrapper:hover
-    .image-gallery-right-nav
-    .image-gallery-left-nav
-        opacity 1
-        margin-left 0
-        margin-right 0
+  .image-gallery-slide-wrapper:hover
+      .image-gallery-right-nav
+      .image-gallery-left-nav
+          opacity 1
+          margin-left 0
+          margin-right 0
 
-@media only screen and (max-width: 700px)
-    .image-gallery
-        margin-top 10px
+  @media only screen and (max-width: 700px)
+      .image-gallery
+          margin-top 10px
 
-    .image-gallery-slide
-        height 255px!important
+      .image-gallery-slide
+          height 255px!important
 
-    .image-gallery .image-gallery-slides
-        padding-bottom 0px
+      .image-gallery .image-gallery-slides
+          padding-bottom 0px
